--- a/index.html
+++ b/index.html
@@ -2,328 +2,226 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Licowa Photo Booth</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Photo Booth Studio</title>
+
+<script src="https://cdn.tailwindcss.com"></script>
 
 <style>
-body{
-  margin:0;
-  background:#111;
-  color:white;
-  font-family:Arial;
-  overflow:hidden;
-}
-
-.main{
-  display:flex;
-  height:100vh;
-  padding:10px;
-  gap:10px;
-}
-
-/* PANEL KIRI */
-.left-panel{
-  width:16%;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  padding-top:60px;
-  gap:12px;
-}
-
-.left-panel button{
-  width:100%;
-}
-
-/* PANEL TENGAH */
-.center-panel{
-  width:62%;
-  display:flex;
-  flex-direction:column;
-}
-
-.video-wrap{
-  position:relative;
-}
-
-video{
-  width:100%;
-  border-radius:16px;
-  border:3px solid #ff0055;
-  transform: scaleX(-1); /* mirror kamera */
-}
-
-/* FRAME GALLERY */
-.frame-gallery{
-  display:flex;
-  gap:12px;
-  margin-top:8px;
-  overflow-x:auto;
-  padding-bottom:6px;
-}
-
-.frame-gallery img{
-  height:120px;          /* diperbesar */
-  border-radius:14px;
-  border:3px solid transparent;
-  cursor:pointer;
-  transition: transform 0.2s;
-}
-
-.frame-gallery img:hover{
-  transform: scale(1.1);
-}
-
-.frame-gallery img.active{
-  border-color:#ff0055;
-}
-
-/* PANEL KANAN */
-.right-panel{
-  width:22%;
-  display:flex;
-  flex-direction:column;
-}
-
-canvas{
-  width:100%;
-  max-height:85vh;
-  background:black;
-  border-radius:16px;
-}
-
-.download-btn{
-  margin-top:10px;
-}
-
-/* COUNTDOWN */
-#countdown{
-  position:absolute;
-  top:40%;
-  left:0;
-  right:0;
-  text-align:center;
-  font-size:72px;
-  font-weight:bold;
-}
+video { transform: scaleX(-1); }
 
 /* FLASH */
-#flash{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background:white;
-  opacity:0;
-  pointer-events:none;
-  transition:opacity 0.15s;
-  z-index:999;
+.flash-active { animation: flash 0.4s ease-out; }
+@keyframes flash { from {opacity:1} to {opacity:0} }
+
+/* TIMER ANGKA (PASTI KELIHATAN) */
+.timer-anim {
+  animation: pop 0.6s ease-out;
+}
+@keyframes pop {
+  0%   { transform: scale(0.5); opacity: 0; }
+  60%  { transform: scale(1.25); opacity: 1; }
+  100% { transform: scale(1); opacity: 1; }
 }
 
-.hidden{display:none;}
-
-button{
-  padding:14px;
-  border:none;
-  border-radius:12px;
-  font-size:18px;
-  font-weight:bold;
-  background:linear-gradient(45deg,#ff0055,#ff7a00);
-  color:white;
+/* SMILE */
+.smile-anim {
+  animation: smilePop 0.7s ease-out;
+  color: #22c55e;
 }
-
-.secondary{
-  background:#333;
+@keyframes smilePop {
+  0%   { transform: scale(0.4); opacity: 0; }
+  60%  { transform: scale(1.4); opacity: 1; }
+  100% { transform: scale(1); opacity: 1; }
 }
 </style>
 </head>
 
-<body>
+<body class="bg-neutral-900 text-white min-h-screen p-4">
 
-<div class="main">
+<div id="flash" class="fixed inset-0 bg-white opacity-0 pointer-events-none z-50"></div>
 
-<!-- PANEL KIRI -->
-<div class="left-panel">
-<button onclick="startSession()">▶️ MULAI FOTO</button>
-<button class="secondary" onclick="reset()">🔄 ULANGI</button>
+<header class="text-center mb-6">
+  <h1 class="text-2xl font-black text-blue-500">
+    PHOTOBOOTH <span class="text-white">STUDIO</span>
+  </h1>
+</header>
+
+<main class="max-w-6xl mx-auto grid grid-cols-12 gap-6">
+
+<!-- LEFT -->
+<div class="col-span-12 md:col-span-3 space-y-4">
+  <div class="bg-neutral-800 p-4 rounded-2xl border border-neutral-700">
+    <label class="text-xs font-bold text-neutral-400 uppercase">Layout & Timer</label>
+
+    <div class="grid grid-cols-3 gap-2 mt-3">
+      <button data-layout="1" class="layoutBtn bg-blue-600 py-2 rounded-lg text-xs">1</button>
+      <button data-layout="3" class="layoutBtn bg-neutral-700 py-2 rounded-lg text-xs">3</button>
+      <button data-layout="4" class="layoutBtn bg-neutral-700 py-2 rounded-lg text-xs">4</button>
+    </div>
+
+    <select id="timerSelect" class="w-full bg-neutral-700 p-2 rounded-lg text-sm mt-4">
+      <option value="3">3 Detik</option>
+      <option value="5" selected>5 Detik</option>
+      <option value="10">10 Detik</option>
+    </select>
+
+    <button id="startBtn" class="w-full bg-blue-600 py-3 rounded-xl font-bold mt-4">
+      AKTIFKAN KAMERA
+    </button>
+  </div>
+
+  <button id="captureBtn"
+    class="w-full bg-green-600 py-4 rounded-2xl font-black text-xl disabled:opacity-30"
+    disabled>
+    MULAI FOTO
+  </button>
 </div>
 
-<!-- PANEL TENGAH -->
-<div class="center-panel">
-<div class="video-wrap">
-<video id="video" autoplay playsinline></video>
-<div id="countdown" class="hidden"></div>
+<!-- CAMERA -->
+<div class="col-span-12 md:col-span-6 relative bg-black rounded-3xl overflow-hidden border-4 border-neutral-800 aspect-[3/4] md:aspect-square">
+  <video id="video" class="w-full h-full object-cover" autoplay playsinline></video>
+
+  <div id="timerDisplay"
+    class="absolute inset-0 flex items-center justify-center
+           text-white text-9xl font-black hidden pointer-events-none">
+  </div>
 </div>
 
-<div class="frame-gallery" id="frameGallery"></div>
+<!-- RIGHT -->
+<div class="col-span-12 md:col-span-3 bg-neutral-800 p-4 rounded-2xl border border-neutral-700 flex flex-col items-center">
+  <p class="text-xs font-bold text-neutral-400 uppercase self-start mb-2">Preview</p>
+
+  <div class="w-full bg-neutral-900 rounded-lg overflow-hidden mb-4 border border-neutral-700">
+    <img id="photoPreview" class="w-full hidden">
+    <div id="placeholder" class="py-24 text-center text-neutral-600 text-[10px] uppercase">
+      Siap untuk berfoto
+    </div>
+  </div>
+
+  <div class="grid grid-cols-2 gap-2 w-full">
+    <button id="downloadBtn" class="bg-purple-600 py-2 rounded-lg text-xs font-bold" disabled>SIMPAN</button>
+    <button id="retakeBtn" class="bg-red-600 py-2 rounded-lg text-xs font-bold" disabled>HAPUS</button>
+  </div>
 </div>
 
-<!-- PANEL KANAN -->
-<div class="right-panel">
-<canvas id="canvas"></canvas>
-<button class="download-btn" onclick="download()">⬇️ DOWNLOAD</button>
-</div>
+</main>
 
-</div>
-
-<div id="flash"></div>
+<canvas id="canvas" class="hidden"></canvas>
 
 <script>
-const video=document.getElementById("video");
-const canvas=document.getElementById("canvas");
-const ctx=canvas.getContext("2d");
-const countdownEl=document.getElementById("countdown");
-const frameGallery=document.getElementById("frameGallery");
-const flash=document.getElementById("flash");
+let stream = null;
+let layout = 1;
 
-let frame=new Image();
-let photos=[];
+const video = document.getElementById('video');
+const canvas = document.getElementById('canvas');
+const timer = document.getElementById('timerDisplay');
+const photoPreview = document.getElementById('photoPreview');
 
-const TOTAL=4;
-const TIMER=3;
+/* CAMERA */
+startBtn.onclick = async () => {
+  stream = await navigator.mediaDevices.getUserMedia({ video:{ facingMode:"user" }});
+  video.srcObject = stream;
+  captureBtn.disabled = false;
+};
 
-/* ukuran strip 5x15 */
-const STRIP_WIDTH=1000;
-const STRIP_HEIGHT=3000;
-canvas.width=STRIP_WIDTH;
-canvas.height=STRIP_HEIGHT;
-
-/* daftar frame */
-const frameList=[
-"frames/frame1.png",
-"frames/frame2.png",
-"frames/frame3.png"
-];
-
-frameList.forEach(src=>{
-  const img=document.createElement("img");
-  img.src=src;
-  img.onclick=()=>selectFrame(img);
-  frameGallery.appendChild(img);
+/* LAYOUT */
+document.querySelectorAll('[data-layout]').forEach(btn=>{
+  btn.onclick=()=>{
+    layout=parseInt(btn.dataset.layout);
+    document.querySelectorAll('[data-layout]').forEach(b=>{
+      b.classList.replace('bg-blue-600','bg-neutral-700');
+    });
+    btn.classList.replace('bg-neutral-700','bg-blue-600');
+  };
 });
 
-/* kamera */
-navigator.mediaDevices.getUserMedia({video:true})
-.then(stream=>video.srcObject=stream);
+/* COUNTDOWN FINAL (FIX) */
+function countdown(seconds){
+  return new Promise(resolve=>{
+    let t = seconds;
+    timer.classList.remove('hidden');
 
-/* flash effect */
-function shutterFlash(){
-  flash.style.opacity="1";
-  setTimeout(()=>flash.style.opacity="0",120);
-}
+    const iv = setInterval(()=>{
+      timer.classList.remove('timer-anim','smile-anim');
+      void timer.offsetWidth;
 
-/* countdown */
-function countdown(sec){
-return new Promise(res=>{
-countdownEl.classList.remove("hidden");
-let s=sec;
-countdownEl.textContent=s;
+      if(t > 0){
+        timer.textContent = t;
+        timer.className =
+          "absolute inset-0 flex items-center justify-center text-white text-9xl font-black timer-anim";
+      }
 
-const i=setInterval(()=>{
-s--;
-countdownEl.textContent=s;
+      if(t === 0){
+        timer.textContent = "SMILE!";
+        timer.className =
+          "absolute inset-0 flex items-center justify-center text-7xl font-black smile-anim";
+      }
 
-if(s===0){
-clearInterval(i);
-countdownEl.classList.add("hidden");
-res();
-}
-},1000);
-});
-}
+      if(t < 0){
+        clearInterval(iv);
+        setTimeout(()=>{
+          timer.classList.add('hidden');
+          resolve();
+        },600);
+      }
 
-/* capture mirror */
-function capture(){
-  shutterFlash();
-
-  const c=document.createElement("canvas");
-  c.width=1000;
-  c.height=1000;
-  const cctx=c.getContext("2d");
-
-  cctx.translate(c.width,0);
-  cctx.scale(-1,1);
-  cctx.drawImage(video,0,0,1000,1000);
-
-  photos.push(c);
-}
-
-/* sesi foto */
-async function startSession(){
-photos=[];
-for(let i=0;i<TOTAL;i++){
-await countdown(TIMER);
-capture();
-}
-render();
-}
-
-/* render pas dengan frame */
-function render(){
-  const h = canvas.height / TOTAL;
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  photos.forEach((p,i)=>{
-    const slotW = canvas.width;
-    const slotH = h;
-
-    const imgW = p.width;
-    const imgH = p.height;
-
-    const imgRatio = imgW / imgH;
-    const slotRatio = slotW / slotH;
-
-    let drawW, drawH, offsetX, offsetY;
-
-    if(imgRatio > slotRatio){
-      drawH = slotH;
-      drawW = drawH * imgRatio;
-      offsetX = -(drawW - slotW) / 2;
-      offsetY = 0;
-    } else {
-      drawW = slotW;
-      drawH = drawW / imgRatio;
-      offsetX = 0;
-      offsetY = -(drawH - slotH) / 2;
-    }
-
-    ctx.drawImage(
-      p,
-      offsetX,
-      i*h + offsetY,
-      drawW,
-      drawH
-    );
+      t--;
+    },1000);
   });
-
-  if(frame.src)
-    ctx.drawImage(frame,0,0,canvas.width,canvas.height);
 }
 
-/* pilih frame */
-function selectFrame(img){
-document.querySelectorAll(".frame-gallery img")
-.forEach(i=>i.classList.remove("active"));
+/* CAPTURE */
+captureBtn.onclick = async ()=>{
+  const delay = parseInt(timerSelect.value);
+  const w = video.videoWidth;
+  const h = video.videoHeight;
 
-img.classList.add("active");
-frame.src=img.src;
-frame.onload=render;
-}
+  canvas.width = w + 40;
+  canvas.height = h * layout + 120;
+  const ctx = canvas.getContext('2d');
 
-/* reset */
-function reset(){
-ctx.clearRect(0,0,canvas.width,canvas.height);
-photos=[];
-}
+  ctx.fillStyle="#fff";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
 
-/* download */
-function download(){
-const a=document.createElement("a");
-a.download="photostrip.jpg";
-a.href=canvas.toDataURL("image/jpeg",0.95);
-a.click();
-}
+  for(let i=0;i<layout;i++){
+    await countdown(delay);
+
+    flash.classList.add('flash-active');
+    setTimeout(()=>flash.classList.remove('flash-active'),400);
+
+    ctx.save();
+    ctx.scale(-1,1);
+    ctx.drawImage(video,-w-20,20+i*h,w,h);
+    ctx.restore();
+  }
+
+  ctx.fillStyle="#000";
+  ctx.font="bold 42px Slab Serif";
+  ctx.textAlign="center";
+  ctx.fillText("RUANG RASA BOOTH",canvas.width/2,canvas.height-40);
+
+  photoPreview.src = canvas.toDataURL("image/png");
+  photoPreview.classList.remove('hidden');
+  placeholder.classList.add('hidden');
+
+  downloadBtn.disabled=false;
+  retakeBtn.disabled=false;
+};
+
+/* DOWNLOAD */
+downloadBtn.onclick=()=>{
+  const a=document.createElement('a');
+  a.href=photoPreview.src;
+  a.download=`photo-${Date.now()}.png`;
+  a.click();
+};
+
+/* RETAKE */
+retakeBtn.onclick=()=>{
+  photoPreview.classList.add('hidden');
+  placeholder.classList.remove('hidden');
+};
 </script>
 
 </body>
