--- a/index.html
+++ b/index.html
@@ -33,26 +33,6 @@
             position: relative;
         }
 
-        /* Idle Screen */
-        #idle-screen {
-            text-align: center;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 50px;
-            border-radius: 20px;
-            cursor: pointer;
-        }
-
-        .animation {
-            font-size: 80px;
-            animation: bounce 2s infinite;
-        }
-
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-            40% { transform: translateY(-10px); }
-            60% { transform: translateY(-5px); }
-        }
-
         /* Setup Screen */
         #setup-screen {
             text-align: center;
@@ -177,15 +157,9 @@
 </head>
 <body>
     <div id="app">
-        <!-- Idle Screen -->
-        <div id="idle-screen">
-            <h1>Photo Booth Sederhana</h1>
-            <p>Sentuh untuk mulai</p>
-            <div class="animation">📸</div>
-        </div>
-
         <!-- Setup Screen -->
-        <div id="setup-screen" class="hidden">
+        <div id="setup-screen">
+            <h1>Photo Booth Sederhana</h1>
             <h2>Pilih Frame</h2>
             <div id="frame-options">
                 <img src="frames/frame1.png" alt="Frame 1" data-frame="frame1.png">
@@ -219,7 +193,6 @@
         let video = document.getElementById('video');
         let countdownEl = document.getElementById('countdown');
         let photoPreview = document.getElementById('photo-preview');
-        let idleScreen = document.getElementById('idle-screen');
         let setupScreen = document.getElementById('setup-screen');
         let cameraScreen = document.getElementById('camera-screen');
         let previewScreen = document.getElementById('preview-screen');
@@ -228,7 +201,6 @@
 
         // Initialize
         document.addEventListener('DOMContentLoaded', () => {
-            idleScreen.addEventListener('click', showSetup);
             document.getElementById('start-camera').addEventListener('click', startCamera);
             document.getElementById('start-photo').addEventListener('click', startPhoto);
             document.getElementById('download').addEventListener('click', downloadPhoto);
@@ -244,11 +216,6 @@
                 });
             });
         });
-
-        function showSetup() {
-            idleScreen.classList.add('hidden');
-            setupScreen.classList.remove('hidden');
-        }
 
         async function startCamera() {
             setupScreen.classList.add('hidden');
@@ -334,7 +301,7 @@
 
         function newPhoto() {
             previewScreen.classList.add('hidden');
-            idleScreen.classList.remove('hidden');
+            setupScreen.classList.remove('hidden');
             selectedFrame = '';
         }
     </script>
