--- a/index.html
+++ b/index.html
@@ -1,309 +1,222 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Simple Photo Booth with Frames</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            user-select: none;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>PhotoBooth Studio</title>
 
-        body {
-            background: linear-gradient(135deg, #6a0dad, #1e90ff);
-            color: white;
-            overflow: hidden;
-            width: 100vw;
-            height: 100vh;
-        }
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
-        #app {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
-
-        /* Setup Screen */
-        #setup-screen {
-            text-align: center;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 50px;
-            border-radius: 20px;
-        }
-
-        #frame-options {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-
-        #frame-options img {
-            width: 100px;
-            height: 75px;
-            object-fit: cover;
-            border: 2px solid white;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: border 0.3s;
-        }
-
-        #frame-options img:hover, #frame-options img.selected {
-            border-color: yellow;
-        }
-
-        /* Camera Screen */
-        #camera-screen {
-            position: relative;
-            width: 100%;
-            height: 100%;
-        }
-
-        #video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        #countdown {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 150px;
-            color: yellow;
-            text-shadow: 0 0 20px black;
-            animation: pulse 1s infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.2); }
-        }
-
-        #controls {
-            position: absolute;
-            bottom: 50px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        button {
-            padding: 20px 40px;
-            font-size: 24px;
-            border: none;
-            border-radius: 10px;
-            background: #ff4500;
-            color: white;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-
-        button:hover, button:active {
-            background: #ff6347;
-        }
-
-        /* Preview Screen */
-        #preview-screen {
-            text-align: center;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 50px;
-            border-radius: 20px;
-        }
-
-        #photo-preview {
-            width: 300px;
-            height: 225px;
-            object-fit: cover;
-            border: 5px solid white;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-
-        /* Hidden Class */
-        .hidden {
-            display: none !important;
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            #countdown {
-                font-size: 100px;
-            }
-            button {
-                padding: 15px 30px;
-                font-size: 20px;
-            }
-            #photo-preview {
-                width: 250px;
-                height: 187px;
-            }
-            #frame-options img {
-                width: 80px;
-                height: 60px;
-            }
-        }
-    </style>
+<style>
+.layoutBtn.active { background:#2563eb; transform:scale(1.05); }
+.flash-active { animation: flashAnim 0.5s ease-out; }
+@keyframes flashAnim { 0%{opacity:1;} 100%{opacity:0;} }
+video { transform: scaleX(-1); }
+</style>
 </head>
-<body>
-    <div id="app">
-        <!-- Setup Screen -->
-        <div id="setup-screen">
-            <h1>Photo Booth Sederhana</h1>
-            <h2>Pilih Frame</h2>
-            <div id="frame-options">
-                <img src="frames/frame1.png" alt="Frame 1" data-frame="frame1.png">
-                <img src="frames/frame2.png" alt="Frame 2" data-frame="frame2.png">
-                <!-- Tambah lebih banyak frame di sini -->
-            </div>
-            <button id="start-camera">Mulai Kamera</button>
-        </div>
 
-        <!-- Camera Screen -->
-        <div id="camera-screen" class="hidden">
-            <video id="video" autoplay></video>
-            <div id="countdown" class="hidden">3</div>
-            <div id="controls">
-                <button id="start-photo">Ambil Foto</button>
-            </div>
-        </div>
+<body class="bg-neutral-900 text-white min-h-screen p-4">
 
-        <!-- Preview Screen -->
-        <div id="preview-screen" class="hidden">
-            <h2>Foto Anda</h2>
-            <img id="photo-preview" src="" alt="Foto">
-            <div>
-                <button id="download">Download</button>
-                <button id="new-photo">Foto Baru</button>
-            </div>
-        </div>
-    </div>
+<div id="flash" class="fixed inset-0 bg-white opacity-0 pointer-events-none z-50"></div>
 
-    <script>
-        let video = document.getElementById('video');
-        let countdownEl = document.getElementById('countdown');
-        let photoPreview = document.getElementById('photo-preview');
-        let setupScreen = document.getElementById('setup-screen');
-        let cameraScreen = document.getElementById('camera-screen');
-        let previewScreen = document.getElementById('preview-screen');
-        let shutterSound = new Audio('assets/camera-shutter.mp3');
-        let selectedFrame = '';
+<header class="text-center mb-6">
+<h1 class="text-2xl font-black text-blue-500">
+PHOTOBOOTH <span class="text-white">STUDIO</span>
+</h1>
+</header>
 
-        // Initialize
-        document.addEventListener('DOMContentLoaded', () => {
-            document.getElementById('start-camera').addEventListener('click', startCamera);
-            document.getElementById('start-photo').addEventListener('click', startPhoto);
-            document.getElementById('download').addEventListener('click', downloadPhoto);
-            document.getElementById('new-photo').addEventListener('click', newPhoto);
+<main class="max-w-6xl mx-auto grid grid-cols-12 gap-6">
 
-            // Frame selection
-            const frameImgs = document.querySelectorAll('#frame-options img');
-            frameImgs.forEach(img => {
-                img.addEventListener('click', () => {
-                    frameImgs.forEach(i => i.classList.remove('selected'));
-                    img.classList.add('selected');
-                    selectedFrame = img.dataset.frame;
-                });
-            });
-        });
+<!-- PANEL KIRI -->
+<div class="col-span-12 md:col-span-3 space-y-4">
 
-        async function startCamera() {
-            setupScreen.classList.add('hidden');
-            cameraScreen.classList.remove('hidden');
-            try {
-                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                video.srcObject = stream;
-            } catch (err) {
-                alert('Kamera tidak dapat diakses: ' + err.message);
-            }
-        }
+<div class="bg-neutral-800 p-4 rounded-2xl border border-neutral-700">
 
-        function startPhoto() {
-            countdown(3);
-        }
+<label class="text-xs text-neutral-400 uppercase">
+Layout & Timer
+</label>
 
-        function countdown(seconds) {
-            countdownEl.classList.remove('hidden');
-            countdownEl.textContent = seconds;
-            if (seconds > 0) {
-                setTimeout(() => countdown(seconds - 1), 1000);
-            } else {
-                takePhoto();
-            }
-        }
+<div class="grid grid-cols-3 gap-2 mt-2 mb-4">
+<button data-layout="1" class="layoutBtn bg-neutral-700 py-2 rounded-lg text-xs active">1</button>
+<button data-layout="3" class="layoutBtn bg-neutral-700 py-2 rounded-lg text-xs">3</button>
+<button data-layout="4" class="layoutBtn bg-neutral-700 py-2 rounded-lg text-xs">4</button>
+</div>
 
-        function takePhoto() {
-            countdownEl.classList.add('hidden');
-            const canvas = document.createElement('canvas');
-            const ctx = canvas.getContext('2d');
-            const videoWidth = video.videoWidth;
-            const videoHeight = video.videoHeight;
+<select id="timerSelect" class="w-full bg-neutral-700 p-2 rounded-lg mb-4">
+<option value="3">3 Detik</option>
+<option value="5" selected>5 Detik</option>
+<option value="10">10 Detik</option>
+</select>
 
-            // Crop tengah video agar rasio 4:3 (asumsi frame 4:3)
-            const targetRatio = 4 / 3;
-            let cropWidth, cropHeight, cropX, cropY;
+<button id="startBtn"
+class="w-full bg-blue-600 hover:bg-blue-500 py-3 rounded-xl font-bold mb-2">
+AKTIFKAN KAMERA
+</button>
 
-            if (videoWidth / videoHeight > targetRatio) {
-                // Video lebih lebar, crop sisi kiri-kanan
-                cropHeight = videoHeight;
-                cropWidth = cropHeight * targetRatio;
-                cropX = (videoWidth - cropWidth) / 2;
-                cropY = 0;
-            } else {
-                // Video lebih tinggi, crop atas-bawah
-                cropWidth = videoWidth;
-                cropHeight = cropWidth / targetRatio;
-                cropX = 0;
-                cropY = (videoHeight - cropHeight) / 2;
-            }
+</div>
 
-            canvas.width = cropWidth;
-            canvas.height = cropHeight;
-            ctx.drawImage(video, cropX, cropY, cropWidth, cropHeight, 0, 0, cropWidth, cropHeight);
+<button id="captureBtn"
+class="w-full bg-green-600 hover:bg-green-500 py-4 rounded-2xl font-black text-xl disabled:opacity-30"
+disabled>
+MULAI FOTO
+</button>
 
-            if (selectedFrame) {
-                const frameImg = new Image();
-                frameImg.src = `frames/${selectedFrame}`;
-                frameImg.onload = () => {
-                    // Asumsikan frame ukuran sama dengan crop, overlay di atas
-                    ctx.drawImage(frameImg, 0, 0, cropWidth, cropHeight);
-                    const dataURL = canvas.toDataURL('image/png');
-                    photoPreview.src = dataURL;
-                    shutterSound.play();
-                    cameraScreen.classList.add('hidden');
-                    previewScreen.classList.remove('hidden');
-                };
-            } else {
-                const dataURL = canvas.toDataURL('image/png');
-                photoPreview.src = dataURL;
-                shutterSound.play();
-                cameraScreen.classList.add('hidden');
-                previewScreen.classList.remove('hidden');
-            }
-        }
+</div>
 
-        function downloadPhoto() {
-            const link = document.createElement('a');
-            link.href = photoPreview.src;
-            link.download = 'photo.png';
-            link.click();
-        }
+<!-- VIDEO -->
+<div class="col-span-12 md:col-span-6 relative bg-black rounded-3xl overflow-hidden border-4 border-neutral-800 flex items-center justify-center">
 
-        function newPhoto() {
-            previewScreen.classList.add('hidden');
-            setupScreen.classList.remove('hidden');
-            selectedFrame = '';
-        }
-    </script>
+<video id="video" class="w-full h-full object-cover" autoplay playsinline></video>
+
+<div id="timerDisplay"
+class="absolute text-9xl font-black hidden"></div>
+
+</div>
+
+<!-- PANEL KANAN -->
+<div class="col-span-12 md:col-span-3 bg-neutral-800 p-4 rounded-2xl border border-neutral-700 flex flex-col items-center">
+
+<p class="text-xs text-neutral-400 uppercase self-start mb-2">
+Preview Hasil
+</p>
+
+<div class="w-full bg-neutral-900 rounded-lg overflow-hidden mb-4 border border-neutral-700">
+<img id="photoPreview" class="w-full hidden">
+<div id="placeholder"
+class="py-24 text-center text-neutral-600 text-xs uppercase">
+Siap untuk berfoto
+</div>
+</div>
+
+<div id="qrSection"
+class="hidden w-full bg-white p-2 rounded-lg mb-4 flex flex-col items-center">
+<div id="qrcode"></div>
+<p class="text-[8px] text-black font-bold mt-1 uppercase">
+Scan untuk download
+</p>
+</div>
+
+<div class="grid grid-cols-2 gap-2 w-full">
+<button id="downloadBtn"
+class="bg-purple-600 py-2 rounded-lg text-xs font-bold disabled:opacity-50"
+disabled>SIMPAN</button>
+
+<button id="retakeBtn"
+class="bg-red-600 py-2 rounded-lg text-xs font-bold disabled:opacity-50"
+disabled>HAPUS</button>
+</div>
+
+</div>
+</main>
+
+<canvas id="canvas" class="hidden"></canvas>
+
+<script>
+let layout = 1;
+let stream = null;
+
+const config = {
+  frameColor: "#ffffff",
+  borderSize: 20,
+  text: "",
+  textColor: "#000000",
+};
+
+const video = document.getElementById("video");
+const canvas = document.getElementById("canvas");
+const photoPreview = document.getElementById("photoPreview");
+
+document.getElementById("startBtn").onclick = async () => {
+  try {
+    stream = await navigator.mediaDevices.getUserMedia({ video: true });
+    video.srcObject = stream;
+    document.getElementById("captureBtn").disabled = false;
+    document.getElementById("startBtn").innerText = "KAMERA AKTIF";
+  } catch {
+    alert("Izinkan kamera!");
+  }
+};
+
+document.getElementById("captureBtn").onclick = async () => {
+  const delay = parseInt(document.getElementById("timerSelect").value);
+  const shots = layout;
+
+  const w = video.videoWidth;
+  const h = video.videoHeight;
+  const b = config.borderSize;
+
+  canvas.width = w + b * 2;
+  canvas.height = h * shots + b * 2 + 100;
+
+  const ctx = canvas.getContext("2d");
+  ctx.fillStyle = config.frameColor;
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+  for (let i = 0; i < shots; i++) {
+    await countdown(delay);
+
+    const flash = document.getElementById("flash");
+    flash.classList.add("flash-active");
+    setTimeout(() => flash.classList.remove("flash-active"), 300);
+
+    ctx.save();
+    ctx.scale(-1, 1);
+    ctx.drawImage(video, -w - b, b + i * h, w, h);
+    ctx.restore();
+  }
+
+  finalizePhoto();
+};
+
+function countdown(sec) {
+  return new Promise(res => {
+    let t = sec;
+    const disp = document.getElementById("timerDisplay");
+    disp.classList.remove("hidden");
+
+    const iv = setInterval(() => {
+      disp.textContent = t;
+      if (t <= 0) {
+        clearInterval(iv);
+        disp.classList.add("hidden");
+        res();
+      }
+      t--;
+    }, 1000);
+  });
+}
+
+function finalizePhoto() {
+  const dataUrl = canvas.toDataURL("image/png");
+  photoPreview.src = dataUrl;
+  photoPreview.classList.remove("hidden");
+
+  document.getElementById("placeholder").classList.add("hidden");
+  document.getElementById("downloadBtn").disabled = false;
+  document.getElementById("retakeBtn").disabled = false;
+}
+
+document.getElementById("downloadBtn").onclick = () => {
+  const a = document.createElement("a");
+  a.href = photoPreview.src;
+  a.download = "booth.png";
+  a.click();
+};
+
+document.getElementById("retakeBtn").onclick = () => {
+  photoPreview.classList.add("hidden");
+  document.getElementById("placeholder").classList.remove("hidden");
+};
+
+document.querySelectorAll("[data-layout]").forEach(btn => {
+  btn.onclick = () => {
+    layout = parseInt(btn.dataset.layout);
+    document.querySelectorAll("[data-layout]").forEach(b => b.classList.remove("active"));
+    btn.classList.add("active");
+  };
+});
+</script>
+
 </body>
 </html>
